# ds-agent

./: .env.exmaple  .gitignore  .mcp.json  README.md  main.py  pyproject.toml  reasonix.toml
agent/: config.py  utils.py
agent/core/: compaction.py  context.py  loop.py  prompt.py  recovery.py
agent/hooks/: __init__.py  logging.py  permission.py
agent/systems/: background.py  cron.py  tasks.py  worktree.py
agent/teams/: autonomous.py  bus.py  protocol.py  teammate.py
agent/tools/: bash.py  file.py  mcp.py  registry.py  skill.py  subagent.py  todo.py  web.py
docs/: playwright-mcp.md
servers/: mcp_demo.py  mock_deploy.py  mock_docs.py
