[project]
name = "ds-agent"
version = "0.1.0"
description = "Comprehensive coding agent powered by DeepSeek"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "ddgs>=8",
    "mcp>=1.27,<2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]
